force-app/main/default/objects/Rental_Contract__c/Rental_Contract__c.object-meta.xml
<CustomObject>
    <description>Car rental contract formed by a rental company and one of its customers.</description>
    <label>Rental Contract</label>
    <nameField>
        <displayFormat>RC-{YY}{0000}</displayFormat>
        <label>Rental Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rental Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>