force-app/main/default/objects/Rental_Contract__c/fields/Actual_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Return_Date__c</fullName>
    <description>The date when the customer returned the vehicle.</description>
    <label>Actual Return Date</label>
    <type>Date</type>
</CustomField>