force-app/main/default/objects/Rental_Contract__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description>The company that is offering a contract.</description>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Rental Contracts</relationshipLabel>
    <relationshipName>Rental_Contracts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>