force-app/main/default/objects/Rental_Contract__c/fields/Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>Contract_ID__c</fullName>
    <description>Rental Contract ID number.</description>
    <displayFormat>R-{00000000}</displayFormat>
    <externalId>true</externalId>
    <label>Contract ID</label>
    <type>AutoNumber</type>
</CustomField>