force-app/main/default/objects/Rental_Contract__c/fields/Expected_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Return_Date__c</fullName>
    <description>The date when the customer is expected to return the vehicle.</description>
    <label>Expected Return Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>