force-app/main/default/objects/Rental_Contract__c/fields/Insurance_Policy_ID__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy_ID__c</fullName>
    <description>The ID for the customer&apos;s insurance policy.</description>
    <label>Insurance Policy ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>