force-app/main/default/objects/Rental_Contract__c/fields/Insurance_Policy_Provider__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy_Provider__c</fullName>
    <description>The company that provides the insurance policy.</description>
    <label>Insurance Policy Provider</label>
    <length>80</length>
    <type>Text</type>
</CustomField>