force-app/main/default/objects/Rental_Contract__c/fields/Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Issue_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>The date when the rental contract is formed.</description>
    <label>Issue Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>