force-app/main/default/objects/Rental_Contract__c/fields/Issuing_Depot__c.field-meta.xml
<CustomField>
    <fullName>Issuing_Depot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The depot that is renting out the vehicle.</description>
    <label>Issuing Depot</label>
    <referenceTo>Depot__c</referenceTo>
    <relationshipLabel>Rental Contracts (Issuing Depot)</relationshipLabel>
    <relationshipName>Rental_Contracts_Issue</relationshipName>
    <type>Lookup</type>
</CustomField>