force-app/main/default/objects/Rental_Contract__c/fields/Receiving_Depot__c.field-meta.xml
<CustomField>
    <fullName>Receiving_Depot__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The depot that received the depot.</description>
    <label>Receiving Depot</label>
    <referenceTo>Depot__c</referenceTo>
    <relationshipLabel>Rental Contracts (Receiving Depot)</relationshipLabel>
    <relationshipName>Rental_Contracts_Receiving</relationshipName>
    <type>Lookup</type>
</CustomField>