force-app/main/default/objects/Rental_Contract__c/recordTypes/Have_Insurance.recordType-meta.xml
<RecordType>
    <fullName>Have_Insurance</fullName>
    <active>true</active>
    <label>Have Insurance</label>
</RecordType>