force-app/main/default/objects/Rental_Contract__c/recordTypes/No_Insurance.recordType-meta.xml
<RecordType>
    <fullName>No_Insurance</fullName>
    <active>true</active>
    <label>No Insurance</label>
</RecordType>