force-app/main/default/objects/Rental_Contract__c/listViews/My_Contract_View.listView-meta.xml
<ListView>
    <fullName>My_Contract_View</fullName>
    <columns>Vehicle__c</columns>
    <columns>Status__c</columns>
    <columns>Customer__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>My Contract View</label>
</ListView>