force-app/main/default/objects/Rental_Contract__c/listViews/Rental_Contracts.listView-meta.xml
<ListView>
    <fullName>Rental_Contracts</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Rental Contracts</label>
</ListView>