force-app/main/default/objects/Rental_Contract__c/listViews/Rental_Contracts_List_View.listView-meta.xml
<ListView>
    <fullName>Rental_Contracts_List_View</fullName>
    <columns>Contract_ID__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Customer__c</columns>
    <columns>Vehicle__c</columns>
    <columns>Issue_Date__c</columns>
    <columns>Expected_Return_Date__c</columns>
    <columns>Days_Remaining__c</columns>
    <filterScope>Everything</filterScope>
    <label>Rental Contracts List View</label>
</ListView>